Change training dataset directory

--- a/Authors.ipynb
+++ b/Authors.ipynb
@@ -21,8 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "words_file = r\"word_data.pkl\"\n",
-    "authors_file= r\"email_authors.pkl\""
+    "words_file = r\"Training_Data/word_data.pkl\"\n",
+    "authors_file= r\"Training_Data/email_authors.pkl\""
    ]
   },
   {
